# cs208-logic

./: .gitignore  Makefile  README.md  dune-project  flake.nix  fol_formula.opam  frontend.opam  parser_util.opam  pikchr.opam  sat-widget.opam  site_gen.opam  slakemoth.opam  traintor.opam
assets/: local.css
coursework1-marking/: dune  main.ml
coursework2-marking/: dune  main.ml
cw2023-24/: coursework1.md  coursework2.md
cw2024-25/: coursework1_solutions.md
diagrams/: half-adder.pikchr
examples/: bug.lmt  circuit.lmt  errors.lmt  fsm.lmt  packages.lmt  planning.lmt  week2.lmt
fol_formula/: NameSet.ml  NameSet.mli  dune  fol_formula.ml  fol_formula.mli  formula.ml  formula.mli  grammar.mly  lexer.mll  parser.messages  parser.mly  reader.ml  term.ml  term.mli
frontend/: dune  frontend.ml
generalities/: annotated.ml  command.ml  document.ml  dune  impossible.ml  impossible.mli  json.ml  json.mli  pretty.ml  pretty.mli  result_ext.ml  result_ext.mli  seq_ext.ml  sexp_parser.ml  sexp_parser.mli  simple_tokeniser.ml  simple_tokeniser.mli  string_parser.ml  tuple2.ml  union_find.ml  union_find.mli  utf8_string.ml  utf8_string.mli
html_of_omd/: dune  html_of_omd.ml
html_static/: dune  html_static.ml  html_static.mli
lib/: ast.ml  dune  environment.ml  evaluator.ml  json.ml  lexer.mll  parser.messages  parser.mly  result_syntax.ml  solver.ml  solver.mli  type_checker.ml  utf8_string.ml
model_checker/: automata  colouring  synth-test
model_checker/batch/: dune  main.ml
model_checker/client/: dune  model_checker_widget.ml
model_checker/examples/: partial-order.mdl  paths1.mdl  paths2.mdl  people_and_resources.mdl
model_checker/generator/: dune
model_checker/lib/: checker.ml  checker.mli  dune  exec_structure.ml  format_util.ml  generator.ml  grammar.mly  lexer.mll  model.ml  reader.ml  structure.ml  vocabulary.ml  wff.ml
natural-deduction/: ND_FOL.ml  ask.ml  big_system.ml  classical_propositional_logic.ml  command.ml  command.mli  command_parser.mly  drop_down.ml  dune  focused.ml  focused.mli  focused_UI.ml  focused_UI.mli  focused_command.ml  focused_config.ml  focused_parser.mly  focused_proof_renderer.ml  focused_ui2.ml  goal_stack.ml  hoare.ml  hoare_calculus.ml  hoare_lexer.mll  hoare_parser.mly  latex_of_prooftree.ml  operational_semantics.ml  proof_tree.ml  proof_tree.mli  proof_tree_UI.ml  proof_tree_UI.mli  proof_tree_UI2.ml  proof_tree_html.ml  proof_tree_intf.ml  proof_tree_sequents.ml  prover.ml  question.ml  question.mli  rules.ml  search_calculus.ml  sequent_FOL.ml
nd-cli/: ast.ml  dune  lexer.mll  main.ml  parser.mly  test.proof
nd-focus-app/: dune  natural-deduction.html  nd.css  nd_focusing_widget.ml
pages/: access-control.md  ask.md  circuits.md  contents-extra.md  contents.md  converting-to-cnf.md  coursework1.md  coursework1_solution.md  coursework2.md  coursework2025-26.md  domains-and-parameters.md  entailment.md  equality.md  fruit-exercise.md  halting-problem.md  hoare-arrays.md  hoare-assert-and-auto.md  hoare-logic.md  hoare-loops.md  index.md  induction.md  logical-modelling-intro.md  metatheory-automation.md  natural-deduction-intro.md  packages-exercise.md  packages.md  patterns.md  pred-logic-intro.md  pred-logic-natural-deduction.md  pred-logic-rules.md  pred-logic-semantics.md  proof-implication.md  proof-intro.md  proof-or.md  prop-logic-semantics.md  prop-logic-syntax.md  properties-of-programs.md  prover.md  resource-alloc.md  sat.md  (+7 more)
pages-draft/: access-control.md  circuits.md  converting-to-cnf.md  domains-and-parameters.md  fruit-exercise.md  index-extra.md  patterns.md  pred-logic-semantics-old.md  proof-or.md  properties-of-programs.md  semantics.md  sound-complete-meaning.md  suduko.md  three-valued-logic.md
parser_util/: driver.ml  dune  location.ml  location.mli
pikchr/: dune  opikchr.ml  opikchr.mli
pikchr/test/: dune  test.ml
site_gen/: dune  main.ml
slakemoth/: slakemoth.el
slakemoth/examples/: application.lmt  chartparser.lmt  circuit.lmt  colouring.lmt  definitions.lmt  packages.lmt  packages2.lmt  packages3.lmt  planning-question.lmt  planning2.lmt  planning3.lmt  printing.lmt  regalloc.lmt  robot-world-actions.lmt  robot-world.lmt  table.lmt  week1.lmt
slakemoth/lib/: ast.ml  dune  environment.ml  evaluator.ml  json.ml  lexer.mll  parser.mly  reader.ml  type_checker.ml
slakemoth/lib/core/: ast.ml  compare.ml  dune  evaluator.ml  kinding.ml  marker.ml  parser.mly  reader.ml  type_checker.ml
slakemoth/lib/pp/: ast.ml  dune
slakemoth/marker_tests/: question3.mlmt  specimen3.lmt
slakemoth/widget/: dune  slakemoth_widget.ml
slides/: Makefile  intro.tex  macros.tex  strathclyde.sty  topic0.tex  topic1.tex  topic10.tex  topic2.tex  topic3.tex  topic4.tex  topic5.tex  topic6.tex  topic7.tex  topic8.tex  topic9.tex  week2.tex  week4.tex  week7.tex  week8.tex  week9.tex
slides/old/: week1.tex  week10.tex  week3.tex  week5.tex  week6.tex
test-app/: dune  lmt.html  lmt.ml
util/pp_sexp/: dune  pp_sexp.ml  sexp.ml  sexp_reader.mll
widget/: dune  lmt_widget.ml
widgets/: dune  error_display.ml  selection.ml  textbox.ml  tickbox.ml  validating_entry.ml
