(lang dune 3.7)

(name sat-widget)

(generate_opam_files true)

(source
 (github bobatkey/sat-widget))

(authors "Robert Atkey")

(maintainers "Robert Atkey")

(license GPL3)

(documentation https://url/to/documentation)

(package
 (name sat-widget)
 (synopsis "A tool for exploring logical modelling.")
 (description "A tools for exploting logical modelling.")
 (depends ocaml dune msat)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
