opam-version: "2.0"
synopsis: "A site generation tool"
description: "A site generation tool"
maintainer: ["Robert Atkey"]
authors: ["Robert Atkey"]
license: "GPL3"
homepage: "https://github.com/bobatkey/interactive-logic-course"
doc: ""
bug-reports: ""
depends: [
  "ocaml"
  "dune" {>= "3.7"}
  "menhir"
  "omd"
  "html_sig"
  "ctypes"
  "ctypes-foreign"
  "sexplib0"
  "ppx_sexp_conv"
  "ppx_inline_test"
  "sexplib"
]
pin-depends: [
  [ "html_sig.~dev"
    "git+https://github.com/bobatkey/ulmus#57e1c963b456a59c7f0f2385c03f8155b7af67fc"
  ]
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
dev-repo: "git+https://github.com/bobatkey/sat-widget.git"
