opam-version: "2.0"
synopsis: "A tool for exploring logical modelling."
description: "A tools for exploring logical modelling."
maintainer: ["Robert Atkey"]
authors: ["Robert Atkey"]
license: "GPL3"
tags: ["topics" "to describe" "your" "project"]
homepage: "https://github.com/bobatkey/sat-widget"
doc: "https://url/to/documentation"
bug-reports: "https://github.com/bobatkey/sat-widget/issues"
depends: [
  "ocaml"
  "dune" {>= "3.7"}
  "msat"
  "menhir"
  "odoc" {with-doc}
  "ulmus"
  "omd"
  "ppx_monoid"
  "ppx_deriving"
  "ppx_inline_test"
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
dev-repo: "git+https://github.com/bobatkey/sat-widget.git"
