(library
 (name slakemoth)
 (libraries msat.sat menhirLib parser_util generalities))

(menhir
 (flags --table --unused-token UNKNOWN)
 (modules parser))

(ocamllex lexer)

(rule
 (targets parser_messages.ml)
 (deps parser.mly parser.messages)
 (action
  (with-stdout-to
   parser_messages.ml
   (run
    %{bin:menhir}
    --unused-token
    UNKNOWN
    --table
    %{dep:parser.mly}
    --compile-errors
    %{dep:parser.messages}))))
